--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "publisher": "larshp",
   "repository": "https://github.com/larshp/vscode-source-map",
   "engines": {
-    "vscode": "^1.34.0"
+    "vscode": "^1.58.1"
   },
   "categories": [
     "Visualization"
   ],
   "keywords": [
-    "source-map"
+    "source-map",
+    "sourcemaps",
+    ".map",
+    "map",
+    "sourcemap",
+    "source map"
   ],
   "activationEvents": [
     "onCommand:vscode-source-map.showMap"
@@ -49,5 +54,9 @@
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.32.0",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "source-map": "^0.7.3",
+    "vscode-uri": "3.0.2"
   }
 }
