--- a/package.json
+++ b/package.json
@@ -50,13 +50,13 @@
     "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
-    "@types/node": "^16.6.0",
+    "@types/node": "^16.7.4",
     "@types/vscode": "^1.59.0",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
-    "@vscode/test-web": "0.0.7",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "@vscode/test-web": "^0.0.8",
     "eslint": "^7.32.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.4.2"
   },
   "dependencies": {
     "source-map": "^0.7.3",
