--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,15 +6,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-      with:
-        fetch-depth: 1
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '14.x'
-    - name: npm install
-      run: npm install
-    - name: npm test
-      run: npm test
-    - name: npm test
-      run: npm run vscode:prepublish
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+    - run: npm install
+    - run: npm test
+    - run: npm run vscode:prepublish
